<resources>
    <string name="app_name">To Do List</string>
    <string name="save">Save</string>
    <string name="enter_a_task">Enter a task</string>
    <string name="add">Add Task</string>
    <string name="edit">Edit Task</string>
    <string name="to_do_list">To-Do List</string>
    <string name="add_todo">Add Todo</string>
    <string name="add_to_do">Add To-Do</string>
    <string name="logInText">Welcome</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="loginBtnText">Login</string>
    <string name="noAccountText">Don\'t have an account?</string>
    <string name="signUpText">Sign Up</string>
    <string name="logoutText">Logout</string>
    <string name="homeText">Home</string>
    <string name="profileText">Profile</string>
    <string name="backText">Back</string>
    <string name="loginGoogleText">Login With Google</string>
    <string name="userEmailText">User Email:</string>
    <string name="delete_account">Delete Account</string>
    <string name="emptyListMessage">Yay! No Tasks</string>
</resources>